--- a/src/App.scss
+++ b/src/App.scss
@@ -344,6 +344,8 @@ $sideBarNavItemTextSize: 1.125rem;
 
     .hamburger-playlist {
       display: block;
+      background-color: #ffff;
+      font-size: $headingSize;
     }
 
     .track-wrapper {
