--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 $BgColor1 : #000;
 $color1: #ffff;
 $dimTextColor: #b3b3b3;
@@ -274,11 +276,11 @@ $sideBarNavItemTextSize: 1.125rem;
 // Media Queries for Smaller Screens
 @media (max-width: 768px) {
 
-  $headingSize: 1.5rem/2;
-  $textBoldSize: 1.125rem/2;
-  $subtextSize: 0.875rem/2;
+  $headingSize: math.div(1.5rem, 2);
+  $textBoldSize: math.div(1.125rem, 2);
+  $subtextSize: math.div(0.875rem, 2);
 
-  $sideBarNavItemTextSize: 1.25rem/2;
+  $sideBarNavItemTextSize: math.div(1.25rem, 2);
 
   .app-container {
     flex-direction: column;
@@ -340,7 +342,10 @@ $sideBarNavItemTextSize: 1.125rem;
     padding: 0.75rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
+    justify-content: space-between;
+    overflow-y: scroll;
+
 
     .hamburger-playlist {
       display: block;
